--- a/ui5.ui
+++ b/ui5.ui
@@ -384,10 +384,10 @@ Border-radius: 3px;
 }</string>
                       </property>
                       <property name="minimum">
-                       <number>1</number>
+                       <number>0</number>
                       </property>
                       <property name="maximum">
-                       <number>100</number>
+                       <number>99</number>
                       </property>
                       <property name="value">
                        <number>50</number>
@@ -593,7 +593,7 @@ color: rgb(255, 255, 255);</string>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="output_sound">
+                     <widget class="QPushButton" name="output_sound_1">
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                         <horstretch>0</horstretch>
