--- a/ui5.ui
+++ b/ui5.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>862</width>
-    <height>904</height>
+    <width>794</width>
+    <height>906</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -182,9 +182,25 @@ Border-radius: 10px;</string>
               </layout>
              </item>
              <item>
+              <spacer name="verticalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Fixed</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>10</width>
+                 <height>15</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
               <widget class="QFrame" name="mixer_fram">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -210,7 +226,7 @@ box-shadow : 0px 4px 20px solid rgba(0, 0, 0, 0.6);</string>
                 <number>6</number>
                </property>
                <layout class="QGridLayout" name="gridLayout_4">
-                <item row="0" column="0">
+                <item row="1" column="0">
                  <layout class="QVBoxLayout" name="verticalLayout_9">
                   <property name="spacing">
                    <number>13</number>
@@ -507,12 +523,12 @@ background-color: rgb(31, 32, 34);</string>
                 <enum>Qt::Vertical</enum>
                </property>
                <property name="sizeType">
-                <enum>QSizePolicy::Fixed</enum>
+                <enum>QSizePolicy::Expanding</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>100</height>
+                 <height>50</height>
                 </size>
                </property>
               </spacer>
@@ -896,7 +912,7 @@ QProgressBar::chunk {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>862</width>
+     <width>794</width>
      <height>26</height>
     </rect>
    </property>
